--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,24 @@ sidebar {
   border-radius: 10px;
 }
 
+ul.grid-row {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul.grid-row li {
+  border: 1px solid #3498DB;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  padding: 0.25em;
+  background-color: #2980B9;
+  color: #ECF0F1;
+  text-align: center;
+  vertical-align: middle;
+}
+
 .turquoise {
   background-color: #1ABC9C;
 }
